Add GitHub OAuth authentication integration
- Add auth.js with complete OAuth flow implementation
- Create OAuth callback page at /auth/callback/github
- Update vercel.json with OAuth callback routing
- Add GitHub login button to navigation
- Implement user authentication UI with avatar and logout
- Add responsive OAuth styles for all screen sizes
- Include CSRF protection with state parameter
- Support for user profile display and session management

--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,10 @@
     {
       "source": "/terms",
       "destination": "/terms-of-service.html"
+    },
+    {
+      "source": "/auth/callback/github",
+      "destination": "/auth/callback/github.html"
     }
   ],
   "headers": [
